// Vitest Snapshot v1

exports[`Switch > Switch baseVue demo works fine 1`] = `
<t-space>
  <t-switch
    size="large"
  />
  <t-switch
    size="large"
  />
</t-space>
`;

exports[`Switch > Switch describeVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <div
    class="tdesign-demo-block-row"
  >
    <t-switch
      size="large"
    />
    <t-switch
      size="large"
    />
  </div>
  <div
    class="tdesign-demo-block-row"
  >
    <t-switch
      label="开,关"
      size="large"
    />
    <t-switch
      label="开,关"
      size="large"
    />
  </div>
  <div
    class="tdesign-demo-block-row"
  >
    <t-switch
      label="function () { [native code] },function () { [native code] }"
      size="large"
    />
    <t-switch
      label="function () { [native code] },function () { [native code] }"
      size="large"
    />
  </div>
  <div
    class="tdesign-demo-block-row"
  >
    <t-switch
      label="function () { [native code] }"
      size="large"
    />
    <t-switch
      label="function () { [native code] }"
      size="large"
    />
  </div>
</t-space>
`;

exports[`Switch > Switch sizeVue demo works fine 1`] = `
<t-space
  break-line=""
>
  <t-switch
    size="large"
  />
  <t-switch
    size="medium"
  />
  <t-switch
    size="small"
  />
</t-space>
`;

exports[`Switch > Switch statusVue demo works fine 1`] = `
<t-space
  break-line=""
>
  <t-switch
    size="large"
  />
  <t-switch
    loading=""
    size="large"
  />
  <t-switch
    disabled=""
    size="large"
  />
</t-space>
`;
